[package]
name = "x-gpu-agent"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the agent
name = "xgpu-agent"
path = "src/bin/agent.rs"

[lib]
path = "src/lib.rs"

[dependencies]
futures = "0.3.21"
serde = {version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["macros", "sync", "rt-multi-thread"] }
uuid = "1.0.0"
tungstenite = { version = "0.17.3", features = ["native-tls"] }
url = "2.2.2"
reqwest = "0.11.11"
dotenv = "0.15.0"
thiserror = "1.0.32"
